--- a/notebooks/Feature Engineering.ipynb
+++ b/notebooks/Feature Engineering.ipynb
@@ -1243,7 +1243,7 @@
    "outputs": [],
    "source": [
     "X1 = df_cleaned[['Mkt-RF', 'SP500', 'VIXCLS', 'DEXJPUS', 'NIKKEI225', 'T10Y3M', 'ads_index',\n",
-    "                'open', 'high', 'low', 'close']]\n"
+    "                'open', 'high', 'low', 'close']]"
    ]
   },
   {
@@ -1531,38 +1531,40 @@
     "X_features = X_features.dropna()\n",
     "\n",
     "# Display the updated DataFrame with lagged features and rolling statistics\n",
-    "X_features.head()\n"
+    "X_features.head()"
    ]
   },
   {
-   "cell_type": "raw",
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Lagged Features\n",
+    "Lagged Features\n",
+    "- **Purpose**: Lagged features capture the relationship between past values and future values of a stock’s price. Stock prices often follow certain patterns or trends, and **past prices** can be strong indicators of near-term movement.\n",
+    "**Example**: If **yesterday's (1-day lag)** or **last week’s price (5-day lag)** had an upward trend, today’s price may follow that pattern.\n",
+    "**Application**: In **time series modeling**, lagged values serve as predictors because they provide historical context, allowing the model to learn **dependencies over time**.\n",
     "\n",
-    "Purpose: Lagged features capture the relationship between past values and future values of a stock’s price. Stock prices often follow certain patterns or trends, and past prices can be strong indicators of near-term movement.\n",
-    "\n",
-    "Example: If yesterday's (1-day lag) or last week’s price (5-day lag) had an upward trend, today’s price may follow that pattern.\n",
-    "Application: In time series modeling, lagged values serve as predictors because they provide historical context, allowing the model to learn dependencies over time.\n",
-    "\n",
-    "2. Rolling Statistics\n",
-    "\n",
-    "Purpose: Rolling statistics, like moving averages and volatility, help capture trends and momentum over a specified period. They smooth out short-term fluctuations, making it easier for the model to focus on underlying trends rather than noise.\n",
-    "\n",
-    "Moving Average: Shows the average stock price over recent days. For example, a 5-day moving average helps indicate if the stock is on an upward or downward trend.\n",
-    "\n",
-    "Volatility: Calculating the rolling standard deviation (volatility) indicates how much the price fluctuates over time, which can reflect market uncertainty or stability."
+    "Rolling Statistics\n",
+    "- **Purpose**: **Rolling statistics**, like **moving averages** and **volatility**, help capture trends and momentum over a specified period. They smooth out **short-term fluctuations**, making it easier for the model to focus on **underlying trends** rather than noise.\n",
+    "**Moving Average**: Shows the average stock price over recent days. For example, a **5-day moving average** helps indicate if the stock is on an **upward** or **downward trend**.\n",
+    "**Volatility**: Calculating the **rolling standard deviation** (volatility) indicates how much the price fluctuates over time, which can reflect **market uncertainty or stability**."
    ]
   },
   {
-   "cell_type": "raw",
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lagged Features: We create 1-day, 3-day, and 5-day lags for close, open, high, and low to capture recent trends.\n",
+    "Lagged Features\n",
     "\n",
-    "Rolling Statistics: We compute 5-day and 10-day moving averages (close_ma5, close_ma10) and rolling volatility (close_vol5, close_vol10) for the close price to track recent price trends and volatility.\n",
+    "- We create **1-day, 3-day, and 5-day lags** for **close**, **open**, **high**, and **low** prices to capture recent trends.\n",
     "\n",
-    "Dropping NaN: Since lagged and rolling features produce NaN values for the initial rows, we drop them to avoid issues during modeling."
+    "Rolling Statistics\n",
+    "\n",
+    "- We compute **5-day and 10-day moving averages** (`close_ma5`, `close_ma10`) and **rolling volatility** (`close_vol5`, `close_vol10`) for the close price to track recent price trends and volatility.\n",
+    "\n",
+    "Dropping NaN\n",
+    "- Since lagged and rolling features produce **NaN values** for the initial rows, we drop them to avoid issues during modeling.\n"
    ]
   },
   {
@@ -1900,25 +1902,29 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. SP500 Interaction Terms: Interaction between Google’s close price and the SP500 index, as the general market trend often affects individual stocks.\n",
-    "\n",
-    "2. Volatility Interaction Terms: Interaction between Google’s close price and VIXCLS (volatility index) to capture how market uncertainty impacts Google’s stock.\n",
-    "\n",
-    "3. Other Interactions: You could also try creating ratios and products with global indicators (e.g., DEXJPUS and NIKKEI225), especially if international markets affect Google’s valuation."
+    "- SP500 Interaction Terms\n",
+    "**Purpose**: Interaction between **Google’s close price** and the **SP500 index**, as the general market trend often affects individual stocks.\n",
+    "- Volatility Interaction Terms\n",
+    "**Purpose**: Interaction between **Google’s close price** and **VIXCLS** (volatility index) to capture how **market uncertainty** impacts Google’s stock.\n",
+    "- Other Interactions\n",
+    "**Purpose**: Consider creating **ratios and products** with **global indicators** (e.g., **DEXJPUS** and **NIKKEI225**), especially if **international markets** influence Google’s valuation.\n"
    ]
   },
   {
-   "cell_type": "raw",
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Market Index Interaction (SP500): The interaction between Google’s close and the SP500 index can capture how closely Google’s price correlates with the overall market. Tech stocks, for example, often move in sync with the general market, and this interaction highlights that dependency.\n",
-    "\n",
-    "Volatility Interaction (VIXCLS): When the volatility index (VIXCLS) is high, it signals uncertainty in the market. The interaction between Google’s close price and VIXCLS can reflect how sensitive Google’s price is to market sentiment, which can be useful during times of high or low market confidence.\n",
-    "\n",
-    "Interactions introduce non-linearity by creating relationships that aren’t just additive but multiplicative. This is beneficial because stock price movements are rarely linear—they respond to compounded factors, such as a high market index coupled with low volatility, which often signals bullish conditions."
+    "- Market Index Interaction (SP500)\n",
+    "The interaction between **Google’s close price** and the **SP500 index** can capture how closely Google’s price correlates with the **overall market**. Tech stocks, for example, often move in sync with the general market, and this interaction highlights that dependency.\n",
+    "- Volatility Interaction (VIXCLS)\n",
+    "When the **volatility index (VIXCLS)** is high, it signals **uncertainty in the market**. The interaction between **Google’s close price** and **VIXCLS** can reflect how sensitive Google’s price is to **market sentiment**, which can be especially useful during periods of high or low market confidence.\n",
+    "- Non-Linear Interactions\n",
+    "**Interactions** introduce non-linearity by creating relationships that aren’t just **additive but multiplicative**. This is beneficial because **stock price movements are rarely linear**—they respond to compounded factors, such as a **high market index** coupled with **low volatility**, which often signals **bullish conditions**.\n"
    ]
   },
   {
@@ -2316,27 +2322,27 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Relative Strength Index (RSI): Measures the magnitude of recent price changes to evaluate overbought or oversold conditions.\n",
+    "- **Relative Strength Index (RSI)**: Measures the magnitude of recent price changes to evaluate **overbought or oversold conditions**.\n",
     "\n",
-    "2. Moving Average Convergence Divergence (MACD): Shows the relationship between two moving averages of the stock price, indicating trend changes.\n",
+    "- **Moving Average Convergence Divergence (MACD)**: Shows the relationship between **two moving averages** of the stock price, indicating **trend changes**.\n",
     "\n",
-    "3. Bollinger Bands: Indicates volatility by placing bands around a moving average."
+    "- **Bollinger Bands**: Indicates **volatility** by placing bands around a **moving average**.\n"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RSI: A measure that ranges from 0 to 100, where values above 70 suggest overbought conditions, and values below 30 suggest oversold conditions.\n",
+    "- **RSI**: A measure that ranges from **0 to 100**, where values **above 70** suggest **overbought conditions**, and values **below 30** suggest **oversold conditions**.\n",
     "\n",
-    "MACD: Calculated as the difference between a short-term (12-day) and long-term (26-day) exponential moving average (EMA). A signal line (9-day EMA of MACD) is used to identify buy/sell signals.\n",
+    "- **MACD**: Calculated as the difference between a **short-term (12-day)** and **long-term (26-day) exponential moving average (EMA)**. A **signal line** (9-day EMA of MACD) is used to identify **buy/sell signals**.\n",
     "\n",
-    "Bollinger Bands: Consist of a 20-day moving average (center line) with upper and lower bands set at two standard deviations from the moving average, indicating volatility.\n",
+    "- **Bollinger Bands**: Consist of a **20-day moving average** (center line) with **upper and lower bands** set at **two standard deviations** from the moving average, indicating **volatility**.\n",
     "\n",
-    "Technical indicators reveal hidden signals, like momentum shifts (MACD), overbought/oversold conditions (RSI), and volatility boundaries (Bollinger Bands). These insights can complement the fundamental and market data to improve the model’s predictive power."
+    "- **Technical Indicators**: Reveal hidden signals, like **momentum shifts (MACD)**, **overbought/oversold conditions (RSI)**, and **volatility boundaries (Bollinger Bands)**. These insights can complement fundamental and market data to improve the model’s **predictive power**.\n"
    ]
   },
   {
