Update Model Building
Update the model building process and modified the test, train and validation set codes.

--- a/notebooks/FeatureEng_and_ModelBiasDetn.ipynb
+++ b/notebooks/FeatureEng_and_ModelBiasDetn.ipynb
@@ -3520,6 +3520,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set size: 877\n",
+      "Validation set size: 125\n",
+      "Test set size: 251\n",
+      "Files have been saved locally:\n",
+      "- Training set: X_train_split.csv\n",
+      "- Validation set: X_validation_split.csv\n",
+      "- Test set: X_test_split.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the split percentages\n",
+    "train_size = 0.7\n",
+    "validation_size = 0.1\n",
+    "test_size = 0.2\n",
+    "\n",
+    "# Calculate the number of samples for each split\n",
+    "n = len(X1)\n",
+    "train_end = int(train_size * n)\n",
+    "validation_end = train_end + int(validation_size * n)\n",
+    "\n",
+    "# Split the DataFrame\n",
+    "X_train_split = X1.iloc[:train_end]\n",
+    "X_validation_split = X1.iloc[train_end:validation_end]\n",
+    "X_test_split = X1.iloc[validation_end:]\n",
+    "\n",
+    "# Print the number of samples in each split to verify\n",
+    "print(f\"Training set size: {len(X_train_split)}\")\n",
+    "print(f\"Validation set size: {len(X_validation_split)}\")\n",
+    "print(f\"Test set size: {len(X_test_split)}\")\n",
+    "\n",
+    "X_train_split.to_csv(r'E:\\NEU\\ML Ops\\Project\\StockPricePrediction\\notebooks/X_train_split.csv', index=False)\n",
+    "X_validation_split.to_csv(r'E:\\NEU\\ML Ops\\Project\\StockPricePrediction\\notebooks/X_validation_split.csv', index=False)\n",
+    "X_test_split.to_csv(r'E:\\NEU\\ML Ops\\Project\\StockPricePrediction\\notebooks/X_test_split.csv', index=False)\n",
+    "\n",
+    "print(\"Files have been saved locally:\")\n",
+    "print(\"- Training set: X_train_split.csv\")\n",
+    "print(\"- Validation set: X_validation_split.csv\")\n",
+    "print(\"- Test set: X_test_split.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3528,7 +3585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -3538,122 +3595,65 @@
       "Training Ridge model...\n",
       "Best parameters for Ridge: {'alpha': 0.1}\n",
       "Best cross-validated MSE for Ridge: 0.7794286246766994\n",
-      "Training Lasso model...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 121.70109635963792, tolerance: 20.281467901515047\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 218.88176119477197, tolerance: 40.63020225212993\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 354.22426951756796, tolerance: 77.19707310999627\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 417.4700693293367, tolerance: 88.57125938419564\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 135.5749744511329, tolerance: 20.281467901515047\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 376.6464119831317, tolerance: 40.63020225212993\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 150.88378541003044, tolerance: 77.19707310999627\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 143.69607754195158, tolerance: 88.57125938419564\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 535.872953349861, tolerance: 123.46549780486895\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 118.29247145054481, tolerance: 20.281467901515047\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 197.33345463288762, tolerance: 40.63020225212993\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 361.592756802575, tolerance: 77.19707310999627\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 418.4845358319403, tolerance: 88.57125938419564\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 115.71918838544332, tolerance: 20.281467901515047\n",
-      "  positive)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Training Lasso model...\n",
       "Best parameters for Lasso: {'alpha': 0.1}\n",
       "Best cross-validated MSE for Lasso: 1.2161685810232288\n",
-      "Training ElasticNet model...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 207.32517834955658, tolerance: 40.63020225212993\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 362.72310893235147, tolerance: 77.19707310999627\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 418.2007549122091, tolerance: 88.57125938419564\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 120.96892681118943, tolerance: 20.281467901515047\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 216.53344437246923, tolerance: 40.63020225212993\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 356.8272187301211, tolerance: 77.19707310999627\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 417.7908752879313, tolerance: 88.57125938419564\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 281.2444891542136, tolerance: 40.63020225212993\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 514.1291703531624, tolerance: 77.19707310999627\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 373.64032798350735, tolerance: 88.57125938419564\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 82.26067023373653, tolerance: 20.281467901515047\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 312.2184071051423, tolerance: 40.63020225212993\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 565.878952058932, tolerance: 77.19707310999627\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 105.20249966861002, tolerance: 88.57125938419564\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 123.51965879808407, tolerance: 20.281467901515047\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 365.58736379421737, tolerance: 40.63020225212993\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 148.6050408954868, tolerance: 77.19707310999627\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 136.48690411856558, tolerance: 88.57125938419564\n",
-      "  positive)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Training ElasticNet model...\n",
       "Best parameters for ElasticNet: {'alpha': 0.1, 'l1_ratio': 0.1}\n",
       "Best cross-validated MSE for ElasticNet: 1.125210793450819\n",
       "Ridge Test MSE: 0.9643320600875934, Test MAE: 0.7363533732759767\n",
+      "\n",
+      "Ridge Classification Report on Test Set:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.96      0.97       125\n",
+      "           1       0.96      0.98      0.97       126\n",
+      "\n",
+      "    accuracy                           0.97       251\n",
+      "   macro avg       0.97      0.97      0.97       251\n",
+      "weighted avg       0.97      0.97      0.97       251\n",
+      "\n",
+      "Ridge Test MSE: 0.9643320600875934, Test MAE: 0.7363533732759767, F1 Score: 0.9725490196078431\n",
       "Lasso Test MSE: 1.310848760822773, Test MAE: 0.8784342366053364\n",
-      "ElasticNet Test MSE: 1.405458249274854, Test MAE: 0.8941379738692403\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 41.50885160552548, tolerance: 20.281467901515047\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 533.5325739924053, tolerance: 77.19707310999627\n",
-      "  positive)\n",
-      "c:\\Users\\kandi\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 533.2650658436008, tolerance: 123.46549780486895\n",
-      "  positive)\n"
+      "\n",
+      "Lasso Classification Report on Test Set:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.98      0.97       125\n",
+      "           1       0.98      0.97      0.97       126\n",
+      "\n",
+      "    accuracy                           0.97       251\n",
+      "   macro avg       0.97      0.97      0.97       251\n",
+      "weighted avg       0.97      0.97      0.97       251\n",
+      "\n",
+      "Lasso Test MSE: 1.310848760822773, Test MAE: 0.8784342366053364, F1 Score: 0.9721115537848605\n",
+      "ElasticNet Test MSE: 1.405458249274854, Test MAE: 0.8941379738692403\n",
+      "\n",
+      "ElasticNet Classification Report on Test Set:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.98      0.98       125\n",
+      "           1       0.98      0.98      0.98       126\n",
+      "\n",
+      "    accuracy                           0.98       251\n",
+      "   macro avg       0.98      0.98      0.98       251\n",
+      "weighted avg       0.98      0.98      0.98       251\n",
+      "\n",
+      "ElasticNet Test MSE: 1.405458249274854, Test MAE: 0.8941379738692403, F1 Score: 0.9761904761904762\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split, TimeSeriesSplit, GridSearchCV\n",
     "from sklearn.linear_model import Ridge, Lasso, ElasticNet\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, f1_score, accuracy_score, precision_score, recall_score, roc_auc_score, classification_report\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Set display options for Pandas to show all rows and columns\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_columns', None)\n",
     "\n",
     "# Define features and target\n",
     "features = [col for col in X1.columns if col not in ['close']]\n",
@@ -3695,7 +3695,24 @@
     "    y_pred_test = model.predict(X_test)\n",
     "    test_mse = mean_squared_error(y_test, y_pred_test)\n",
     "    test_mae = mean_absolute_error(y_test, y_pred_test)\n",
-    "    print(f\"{model_name} Test MSE: {test_mse}, Test MAE: {test_mae}\")\n"
+    "    print(f\"{model_name} Test MSE: {test_mse}, Test MAE: {test_mae}\")\n",
+    "  \n",
+    "    # Convert regression predictions to binary classes\n",
+    "    threshold = y_test.median()  # You can adjust this threshold as needed\n",
+    "    y_test_binary = (y_test >= threshold).astype(int)\n",
+    "    y_pred_test_binary = (y_pred_test >= threshold).astype(int)\n",
+    "\n",
+    "    # Calculate metrics for binary classification\n",
+    "    accuracy = accuracy_score(y_test_binary, y_pred_test_binary)\n",
+    "    precision = precision_score(y_test_binary, y_pred_test_binary)\n",
+    "    recall = recall_score(y_test_binary, y_pred_test_binary)\n",
+    "    f1 = f1_score(y_test_binary, y_pred_test_binary)\n",
+    "\n",
+    "    # Print classification report\n",
+    "    print(f\"\\n{model_name} Classification Report on Test Set:\")\n",
+    "    print(classification_report(y_test_binary, y_pred_test_binary))\n",
+    "\n",
+    "    print(f\"{model_name} Test MSE: {test_mse}, Test MAE: {test_mae}, F1 Score: {f1}\")"
    ]
   },
   {
