--- a/notebooks/Model_check_LSTM.ipynb
+++ b/notebooks/Model_check_LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "eac3c55a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7b6fa1cb",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "df89d902",
    "metadata": {},
    "outputs": [
@@ -31,10 +31,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8/8 [==============================] - 1s 4ms/step\n",
-      "RMSE - LSTM: 7.764090328570057\n",
-      "MAE - LSTM: 6.2977614804922775\n",
-      "MAPE - LSTM: 3.1462667668072744\n"
+      "8/8 [==============================] - 1s 6ms/step\n",
+      "RMSE - LSTM: 11.137208872725754\n",
+      "MAE - LSTM: 9.180786132812496\n",
+      "MAPE - LSTM: 4.460068097216628\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tfdv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -214,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
