Updated Model Building results
Updated the model building results - added the regression performance metrics code.

--- a/notebooks/FeatureEng_and_ModelBiasDetn.ipynb
+++ b/notebooks/FeatureEng_and_ModelBiasDetn.ipynb
@@ -3585,7 +3585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3595,59 +3595,43 @@
       "Training Ridge model...\n",
       "Best parameters for Ridge: {'alpha': 0.1}\n",
       "Best cross-validated MSE for Ridge: 0.7794286246766994\n",
+      "\n",
       "Training Lasso model...\n",
       "Best parameters for Lasso: {'alpha': 0.1}\n",
       "Best cross-validated MSE for Lasso: 1.2161685810232288\n",
+      "\n",
       "Training ElasticNet model...\n",
       "Best parameters for ElasticNet: {'alpha': 0.1, 'l1_ratio': 0.1}\n",
       "Best cross-validated MSE for ElasticNet: 1.125210793450819\n",
-      "Ridge Test MSE: 0.9643320600875934, Test MAE: 0.7363533732759767\n",
       "\n",
-      "Ridge Classification Report on Test Set:\n",
-      "              precision    recall  f1-score   support\n",
+      "Evaluating Ridge model on Test Set\n",
+      "Ridge Test Metrics:\n",
+      "Mean Squared Error (MSE): 0.9643\n",
+      "Root Mean Squared Error (RMSE): 0.9820\n",
+      "Mean Absolute Error (MAE): 0.7364\n",
+      "R-squared (R²): 0.9978\n",
       "\n",
-      "           0       0.98      0.96      0.97       125\n",
-      "           1       0.96      0.98      0.97       126\n",
+      "Evaluating Lasso model on Test Set\n",
+      "Lasso Test Metrics:\n",
+      "Mean Squared Error (MSE): 1.3108\n",
+      "Root Mean Squared Error (RMSE): 1.1449\n",
+      "Mean Absolute Error (MAE): 0.8784\n",
+      "R-squared (R²): 0.9971\n",
       "\n",
-      "    accuracy                           0.97       251\n",
-      "   macro avg       0.97      0.97      0.97       251\n",
-      "weighted avg       0.97      0.97      0.97       251\n",
-      "\n",
-      "Ridge Test MSE: 0.9643320600875934, Test MAE: 0.7363533732759767, F1 Score: 0.9725490196078431\n",
-      "Lasso Test MSE: 1.310848760822773, Test MAE: 0.8784342366053364\n",
-      "\n",
-      "Lasso Classification Report on Test Set:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.97      0.98      0.97       125\n",
-      "           1       0.98      0.97      0.97       126\n",
-      "\n",
-      "    accuracy                           0.97       251\n",
-      "   macro avg       0.97      0.97      0.97       251\n",
-      "weighted avg       0.97      0.97      0.97       251\n",
-      "\n",
-      "Lasso Test MSE: 1.310848760822773, Test MAE: 0.8784342366053364, F1 Score: 0.9721115537848605\n",
-      "ElasticNet Test MSE: 1.405458249274854, Test MAE: 0.8941379738692403\n",
-      "\n",
-      "ElasticNet Classification Report on Test Set:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.98      0.98      0.98       125\n",
-      "           1       0.98      0.98      0.98       126\n",
-      "\n",
-      "    accuracy                           0.98       251\n",
-      "   macro avg       0.98      0.98      0.98       251\n",
-      "weighted avg       0.98      0.98      0.98       251\n",
-      "\n",
-      "ElasticNet Test MSE: 1.405458249274854, Test MAE: 0.8941379738692403, F1 Score: 0.9761904761904762\n"
+      "Evaluating ElasticNet model on Test Set\n",
+      "ElasticNet Test Metrics:\n",
+      "Mean Squared Error (MSE): 1.4055\n",
+      "Root Mean Squared Error (RMSE): 1.1855\n",
+      "Mean Absolute Error (MAE): 0.8941\n",
+      "R-squared (R²): 0.9968\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split, TimeSeriesSplit, GridSearchCV\n",
     "from sklearn.linear_model import Ridge, Lasso, ElasticNet\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, f1_score, accuracy_score, precision_score, recall_score, roc_auc_score, classification_report\n",
-    "\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -3681,38 +3665,33 @@
     "    # GridSearch with TimeSeriesSplit\n",
     "    grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=tscv, scoring='neg_mean_squared_error')\n",
     "    grid_search.fit(X_train, y_train)\n",
-    "    \n",
+    "\n",
     "    # Get the best model and store it\n",
     "    best_model = grid_search.best_estimator_\n",
     "    final_models[model_name] = best_model\n",
-    "    \n",
+    "\n",
     "    # Print best parameters and cross-validated performance\n",
     "    print(f\"Best parameters for {model_name}: {grid_search.best_params_}\")\n",
-    "    print(f\"Best cross-validated MSE for {model_name}: {-grid_search.best_score_}\")\n",
+    "    print(f\"Best cross-validated MSE for {model_name}: {-grid_search.best_score_}\\n\")\n",
     "\n",
-    "# Evaluate final models on the test set\n",
+    "# Evaluate final models on the test set with regression metrics\n",
     "for model_name, model in final_models.items():\n",
+    "    print(f\"Evaluating {model_name} model on Test Set\")\n",
+    "\n",
     "    y_pred_test = model.predict(X_test)\n",
+    "    \n",
+    "    # Calculate regression metrics\n",
     "    test_mse = mean_squared_error(y_test, y_pred_test)\n",
+    "    test_rmse = np.sqrt(test_mse)\n",
     "    test_mae = mean_absolute_error(y_test, y_pred_test)\n",
-    "    print(f\"{model_name} Test MSE: {test_mse}, Test MAE: {test_mae}\")\n",
-    "  \n",
-    "    # Convert regression predictions to binary classes\n",
-    "    threshold = y_test.median()  # You can adjust this threshold as needed\n",
-    "    y_test_binary = (y_test >= threshold).astype(int)\n",
-    "    y_pred_test_binary = (y_pred_test >= threshold).astype(int)\n",
+    "    test_r2 = r2_score(y_test, y_pred_test)\n",
     "\n",
-    "    # Calculate metrics for binary classification\n",
-    "    accuracy = accuracy_score(y_test_binary, y_pred_test_binary)\n",
-    "    precision = precision_score(y_test_binary, y_pred_test_binary)\n",
-    "    recall = recall_score(y_test_binary, y_pred_test_binary)\n",
-    "    f1 = f1_score(y_test_binary, y_pred_test_binary)\n",
-    "\n",
-    "    # Print classification report\n",
-    "    print(f\"\\n{model_name} Classification Report on Test Set:\")\n",
-    "    print(classification_report(y_test_binary, y_pred_test_binary))\n",
-    "\n",
-    "    print(f\"{model_name} Test MSE: {test_mse}, Test MAE: {test_mae}, F1 Score: {f1}\")"
+    "    # Print all regression metrics\n",
+    "    print(f\"{model_name} Test Metrics:\")\n",
+    "    print(f\"Mean Squared Error (MSE): {test_mse:.4f}\")\n",
+    "    print(f\"Root Mean Squared Error (RMSE): {test_rmse:.4f}\")\n",
+    "    print(f\"Mean Absolute Error (MAE): {test_mae:.4f}\")\n",
+    "    print(f\"R-squared (R²): {test_r2:.4f}\\n\")\n"
    ]
   },
   {
